Calculation of the conservation score based on Shannon entropy for 31 amino acid protein sequences